chore: resolve PR comments